--- a/web/Admin/css/admin_styles.css
+++ b/web/Admin/css/admin_styles.css
@@ -36,6 +36,20 @@ body{
     display: inline-block;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
+.controlButton{
+    background: rgba(138,138,138,0.5);
+    border-radius: 12px;
+    border: navy;
+    color: #ffffff;
+    padding: 0px 15px;
+    width: 150px;
+    height: 50px;
+    text-decoration: none;
+    cursor: pointer;
+    text-align: center;
+    display: inline-block;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
 .pageTitleText{
     background: rgba(108,108,108,0.5);
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
@@ -54,6 +68,11 @@ h4{
     font-size: 30px;
 }
 h1{
+    color: #ffffff;
+    opacity: 1;
+    font-family: "Helvetica";
+}
+h2{
     color: #ffffff;
     opacity: 1;
     font-family: "Helvetica";
@@ -89,4 +108,7 @@ h1{
     text-align: left;
     display: inline-block;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+input{
+    background: rgba(108,108,108,0.3);
 }
