--- a/web/Admin/css/admin_styles.css
+++ b/web/Admin/css/admin_styles.css
@@ -55,6 +55,16 @@ body{
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     padding: 0px 25px;
 }
+.pageTitleTextGood{
+    background: rgba(0,255,0,0.5);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    padding: 0px 25px;
+}
+.pageTitleTextBad{
+    background: rgba(255,32,32,0.5);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    padding: 0px 25px;
+}
 h5{
     color: #ffffff;
     opacity: 1;
@@ -64,6 +74,11 @@ h5{
 }
 h4{
     color: brown;
+    font-family: "Helvetica";
+    font-size: 30px;
+}
+h3{
+    color: red;
     font-family: "Helvetica";
     font-size: 30px;
 }
