--- a/web/Admin/css/admin_styles.css
+++ b/web/Admin/css/admin_styles.css
@@ -65,12 +65,17 @@ body{
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     padding: 0px 25px;
 }
+.textInputLabel{
+    color: #ffffff;
+    opacity: 1;
+    font-family: "Helvetica";
+    font-size: 15px;
+}
 h5{
     color: #ffffff;
     opacity: 1;
     font-family: "Helvetica";
     font-size: 30px;
-
 }
 h4{
     color: brown;
