--- a/web/Employee/sources/employee_css.css
+++ b/web/Employee/sources/employee_css.css
@@ -15,6 +15,17 @@ body{
     padding: 0px 25px;
 }
 
+.pageTitleTextGood{
+    background: rgba(0,255,0,0.5);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    padding: 0px 25px;
+}
+.pageTitleTextBad{
+    background: rgba(255,32,32,0.5);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    padding: 0px 25px;
+}
+
 .topicButton{
     background-color: #d3d3d3;
     background: rgba(64, 0, 0, 0.96);
@@ -32,6 +43,7 @@ body{
 }
 
 .controlButton{
+    background-color: #d3d3d3;
     background: rgba(64, 0, 0, 0.96);
     border-radius: 12px;
     border: #ffffff;
@@ -42,6 +54,22 @@ body{
     text-decoration: none;
     cursor: pointer;
     text-align: center;
+    display: inline-block;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+.itemButton{
+    background-color: #d3d3d3;
+    background: rgba(64, 0, 0, 0.96);
+    border-radius: 12px;
+    border: #ffffff;
+    color: #805020;
+    padding: 0px 15px;
+    width: 1000px;
+    height: 50px;
+    text-decoration: none;
+    cursor: pointer;
+    text-align: left;
     display: inline-block;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
