--- a/web/Employee/sources/employee_css.css
+++ b/web/Employee/sources/employee_css.css
@@ -90,3 +90,12 @@ h5{
 .itemsBlock{
     padding: 0px 25px;
 }
+
+ul.tab {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+}
