--- a/web/Teacher/sources/teacher_css.css
+++ b/web/Teacher/sources/teacher_css.css
@@ -6,11 +6,11 @@ body{
     margin-bottom: 0;
     margin-width: 0;
     margin_height: 0;
-    background-image: url(probka.png);
+    background-image: url(teacher.jpg);
 }
 
 .pageTitleText{
-    background: rgba(64, 0, 0, 0.96);
+    background: rgba(30, 64, 44, 0.70);
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     padding: 0px 25px;
 }
@@ -28,10 +28,10 @@ body{
 
 .topicButton{
     background-color: #d3d3d3;
-    background: rgba(64, 0, 0, 0.96);
+    background: rgba(30, 64, 44, 0.70);
     border-radius: 12px;
     border: #ffffff;
-    color: #ffff80;
+    color: #bef8ff;
     padding: 0px 15px;
     width: 500px;
     height: 50px;
@@ -44,10 +44,10 @@ body{
 
 .controlButton{
     background-color: #d3d3d3;
-    background: rgba(64, 0, 0, 0.96);
+    background: rgba(30, 64, 44, 0.70);
     border-radius: 12px;
     border: #ffffff;
-    color: #ffff80;
+    color: #bef8ff;
     padding: 0px 15px;
     width: 150px;
     height: 50px;
@@ -81,10 +81,16 @@ h1{
 }
 
 h5{
-    color: #ffff80;
+    color: #bef8ff;
     opacity: 1;
     font-family: "Helvetica";
     font-size: 30px;
+}
+
+h2{
+    color: #bef8ff;
+    opacity: 1;
+    font-family: "Helvetica";
 }
 
 .itemsBlock{
