--- a/web/Admin/css/admin_styles.css
+++ b/web/Admin/css/admin_styles.css
@@ -21,24 +21,48 @@ body{
     background: rgba(0,255,0,0.5);
     padding: 0px 25px;
 }
-.topicButton{
-    background-color: #d3d3d3;
-    background: rgba(138,138,138,0.5);
-    border-radius: 12px;
+
+.itemButton{
+    background: linear-gradient(to bottom right, rgba(19, 19, 19, 0.69), rgba(140, 140, 140, 0.35));
+    border-radius: 6px;
     border: navy;
+    color: #ffffff;
+    padding: 0px 15px 10px ;
+    width: 1000px;
+    height: 30px;
+    cursor: pointer;
+    text-align: left;
+    text-decoration-color: white;
+    font-family: "Helvetica";
+    font-size: 26px;
+    font-weight: bold;
+    display: inline-block;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+.itemButton:hover {
+    background: linear-gradient(to bottom right, rgba(19, 19, 19, 0.47), rgba(139, 125, 140, 0.25));
+    color: white;
+}
+.topicButton{
+    background: linear-gradient(to bottom right, rgba(19, 19, 19, 0.69), rgba(140, 140, 140, 0.35));
+    border-radius: 6px;
+    border: #000000;
     color: #ffffff;
     padding: 0px 15px;
     width: 500px;
     height: 50px;
-    text-decoration: none;
     cursor: pointer;
     text-align: left;
     display: inline-block;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
+.topicButton:hover {
+    background: linear-gradient(to bottom right, rgba(19, 19, 19, 0.47), rgba(139, 125, 140, 0.25));
+    color: white;
+}
 .controlButton{
-    background: rgba(138,138,138,0.5);
-    border-radius: 12px;
+    background: linear-gradient(to bottom right, rgba(19, 19, 19, 0.69), rgba(140, 140, 140, 0.35));
+    border-radius: 6px;
     border: navy;
     color: #ffffff;
     padding: 0px 15px;
@@ -56,12 +80,13 @@ body{
     padding: 0px 25px;
 }
 .pageTitleTextGood{
+    background: linear-gradient(to bottom right, rgb(30, 183, 73), rgba(30, 183, 73, 0.56));
     background: rgb(45, 183, 87);
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     padding: 0px 25px;
 }
 .pageTitleTextBad{
-    background: rgb(235, 49, 66);
+    background: linear-gradient(to bottom right, rgb(183, 0, 12), rgba(183, 0, 12, 0.56));
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     padding: 0px 25px;
 }
@@ -89,12 +114,10 @@ h3{
 }
 h1{
     color: #ffffff;
-    opacity: 1;
     font-family: "Helvetica";
 }
 h2{
     color: #ffffff;
-    opacity: 1;
     font-family: "Helvetica";
 }
 .payAttention{
@@ -114,21 +137,6 @@ h2{
     background: rgba(192,192,192,0.5);
     padding: 0px 25px;}
 
-
-.itemButton{
-    background: linear-gradient(to bottom right, rgba(19, 19, 19, 0.69), rgba(140, 140, 140, 0.35));
-    border-radius: 12px;
-    border: navy;
-    color: #ffffff;
-    padding: 0px 15px;
-    width: 1000px;
-    height: 50px;
-    text-decoration: none;
-    cursor: pointer;
-    text-align: left;
-    display: inline-block;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-}
 input{
     background: rgba(108,108,108,0.3);
 }
