--- a/web/main_css/main_styles.css
+++ b/web/main_css/main_styles.css
@@ -59,7 +59,15 @@
 }
 
 /***************************************************************************************/
+
 /*content*/
+/***************************************************************************************/
+/*tables*/
+.studentTable{
+    border: 1px solid;
+    border-collapse: collapse;
+    color: #fff79c;
+}
 /***************************************************************************************/
 /*buttons*/
 /*control buttons*/
