--- a/src/main/webapp/main_css/main_styles.css
+++ b/src/main/webapp/main_css/main_styles.css
@@ -208,12 +208,8 @@
 
 body{
     color:#000000;
-    margin-left: 0;
-    margin-right: 0;
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-width: 0;
-    margin_height: 0;
+    background-position:center;
+    background-repeat:no-repeat;
 }
 
 .backgroungImageAdmin{
@@ -335,12 +331,6 @@ form{
 /***************************************************************************************/
 /**/
 
-
-.needToFix{
-    background: rgba(255,0,0,0.5);
-    background-image: url(../Admin/css/1000px-Tools.svg.png);
-    padding: 0px 25px;
-}
 .yelowInfo{
     background: rgba(255,255,0,0.5);
     padding: 0px 25px;
