--- a/src/main/webapp/main_css/main_styles.css
+++ b/src/main/webapp/main_css/main_styles.css
@@ -25,6 +25,7 @@
 .pageTitleTextTeacher{
     background: linear-gradient(to bottom right, rgba(19, 19, 19, 0.69), rgba(140, 140, 140, 0.35));
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    color: #a0ffac;
 }
 
 .pageTitleTextStudent{
@@ -108,6 +109,18 @@
     color: #FFFFCE;
 }
 
+.controlButtonTeacherPage{
+    background: linear-gradient(to bottom right, rgba(19, 19, 19, 0.69), rgba(140, 140, 140, 0.35));
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    border: #2a452e;
+    color: #a0ffac;
+}
+
+.controlButtonTeacherPage:hover {
+    background: linear-gradient(to bottom right, rgba(80, 102, 73, 0.69), rgba(109, 255, 142, 0.35));
+    color: #a0ffac;
+}
+
 .controlButtonWelcomePage{
     background: linear-gradient(to bottom right, rgba(2, 2, 4, 0.95), rgba(19, 36, 61, 0.35));
     border: #000040;
@@ -132,10 +145,34 @@
     color: #e5f7fb;
 }
 /**/
+/*time table buttons*/
+.timeTableButton{
+    border-radius: 6px;
+    padding: 0px 15px;
+    width: 120px;
+    height: 120px;
+    cursor: pointer;
+    text-align: left;
+    display: inline-block;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+.timeTableButtonEmployeePage{
+    background: linear-gradient(to bottom right, rgba(40, 0, 0, 0.69), rgba(255, 255, 117, 0.35));
+    border: #45250d;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    color: #fff79c;
+}
+.timeTableButtonEmployeePage:hover {
+    background: linear-gradient(to bottom right, rgba(102, 0, 0, 0.69), rgba(255, 255, 117, 0.35));
+    color: #FFFFCE;
+}
+/**/
 /*menu buttons*/
 .topicButton{
     border-radius: 6px;
     padding: 0px 15px;
+    font-size: 21px;
+    font-weight: bold;
     width: 500px;
     height: 50px;
     cursor: pointer;
@@ -163,6 +200,17 @@
 .topicButtonEmployeePage:hover {
     background: linear-gradient(to bottom right, rgba(102, 0, 0, 0.69), rgba(255, 255, 117, 0.35));
     color: #FFFFCE;
+}
+
+.topicButtonTeacherPage{
+    background: linear-gradient(to bottom right, rgba(19, 19, 19, 0.69), rgba(140, 140, 140, 0.35));
+    border: #2a452e;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    color: #a0ffac;
+}
+.topicButtonTeacherPage:hover {
+    background: linear-gradient(to bottom right, rgba(80, 102, 73, 0.69), rgba(109, 255, 142, 0.35));
+    color: #a0ffac;
 }
 /**/
 /*item buttons*/
@@ -208,8 +256,10 @@
 
 body{
     color:#000000;
-    background-position:center;
+    background-size:cover;
+    background-position:center center;
     background-repeat:no-repeat;
+    background-attachment:fixed;
 }
 
 .backgroungImageAdmin{
