--- a/src/main/webapp/main_css/main_styles.css
+++ b/src/main/webapp/main_css/main_styles.css
@@ -403,6 +403,11 @@ form{
     text-align: left;
 }
 
+.textLabelStudentPage{
+    color: #ffffff;
+    text-align: left;
+}
+
 .textLabelParagraph{
     font-family: "Helvetica";
     font-size: 26px;
@@ -435,6 +440,11 @@ form{
     background: linear-gradient(to bottom right, rgba(19, 19, 19, 0.69), rgba(140, 140, 140, 0.35));
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     color: #a0ffac;
+}
+.pageContentStudentPages{
+    background: linear-gradient(to bottom right, rgba(19, 19, 19, 0.69), rgba(140, 140, 140, 0.35));
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    color: #ffffff;
 }
 
 .pageContentAdminPagesTwoFieldsSize{
